2006-08-17  Paolo Borelli  <pborelli@katamail.com>

	* gedit/dialogs/gedit-preferences-dialog.c: do not crash if no
	lang files are found.

2006-08-17  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-io-error-message-area.c: small memory leaks on error.

2006-08-16  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c:
	* gedit/gedit-app.[ch]:

	properly use window::dispose to drop the references to the ui
	manager and to disconnect the recents_changed callback. It should
	fix warning and crashes. Also turn the lockdown changed handler
	in a simple method so that we avoid headaches tracking the lifetime
	of the window itself.

2006-08-16  Steve Frécinaux  <steve@istique.net>

	* plugins/modelines/modelines.py: fix warning on activation.

2006-08-15  Paolo Borelli  <pborelli@katamail.com>

	* gedit-window.c (gedit_window_finalize): remove the
	recent_manager_changed callback.

2006-08-15  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-store.c: changed 
	g_value_set_string to g_value_take_string to save a string dup

2006-08-15  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-bookmarks-store.[ch]: fixed
	bug 350553 – Filebrowser plugin: Double separators if remote loc. 
	list is empty

=== gedit 2.15.7 ===

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.15.7 released.

2006-08-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit-prefs-manager-app.[ch]:
	* gedit-window.c:
	* gedit-app.c:

	small cleanup in setting/getting the window size.

2006-08-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-saver.c: preserve xattrs, patch by James
	Antill. Bug #350805.

2006-08-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-message-area.c:
	* gedit/gedit-notebook.c:
	* gedit/gedit-panel.c:
	* gedit/gedit-statusbar.c:
	* gedit/gedit-view.c:

	use g_object_ref_sink, patch by John Luke.
