@@ -1,3 +1,12 @@
+2006-08-18  Steve Frécinaux  <steve@istique.net>
+
+	* plugins/externaltools/tools/__init__.py:
+	* plugins/externaltools/tools/functions.py:
+	* plugins/externaltools/tools/manager.py:
+	* plugins/pythonconsole/pythonconsole/__init__.py:
+	
+	Fix translation of python plugins.
+
 2006-08-17  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/dialogs/gedit-preferences-dialog.c: do not crash if no
